[project]
name = "hooke-export"
version = "0.1.0"
description = "Export VCB benchmark metrics to Hugging Face model cards"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "huggingface-hub>=0.20.0",
    "polars>=1.0.0",
    "typer>=0.12.0",
    "vcb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
hooke-export = "hf_export.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
